[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/down.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/neodgm_pro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/Overview.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 20
shadow_size = 6

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 90
outline_size = 3
outline_color = Color( 0.843137, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[node name="Overview" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.352941, 0.211765, 0.8, 1 )
margin_left = 0.943878
margin_right = 259.944
margin_bottom = 384.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_left = 42.551
margin_top = 23.102
margin_right = 162.551
margin_bottom = 73.102
custom_fonts/font = SubResource( 1 )
text = "금일현황"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newCase" type="Label" parent="Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -102.0
margin_bottom = -22.0
custom_fonts/font = SubResource( 2 )
text = "1523"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Diff" type="Label" parent="Panel"]
margin_left = 16.9898
margin_top = 196.326
margin_right = 130.99
margin_bottom = 246.326
custom_fonts/font = SubResource( 3 )
text = "31"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel"]
margin_left = 43.4182
margin_top = 264.285
margin_right = 157.418
margin_bottom = 314.285
custom_fonts/font = SubResource( 1 )
text = "국내"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Panel"]
margin_left = 42.4743
margin_top = 314.31
margin_right = 156.474
margin_bottom = 364.31
custom_fonts/font = SubResource( 1 )
text = "해외"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newCCase" type="Label" parent="Panel"]
margin_left = 106.658
margin_top = 264.285
margin_right = 220.658
margin_bottom = 314.285
custom_fonts/font = SubResource( 1 )
text = "1232"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newFCase" type="Label" parent="Panel"]
margin_left = 108.546
margin_top = 315.254
margin_right = 222.546
margin_bottom = 365.254
custom_fonts/font = SubResource( 1 )
text = "32"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiffImage" type="TextureRect" parent="Panel"]
margin_left = 155.739
margin_top = 198.214
margin_right = 195.739
margin_bottom = 238.214
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
